[package]
name = "gisht"
version = "0.1.0"
authors = ["Karol Kuczmarski <karol.kuczmarski@gmail.com>"]
description = "Gists in the shell"
documentation = "https://github.com/Xion/gisht"
homepage = "https://github.com/Xion/gisht"
repository = "https://github.com/Xion/gisht"
readme = "README.md"
keywords = ["gist", "snippet", "GitHub", "pastebin", "shell"]
license = "GPLv2"

[dependencies]
ansi_term = "0.9"
antidote = "1.0.0"
clap = { version = "2.19.2", features = ["suggestions"] }
conv = "0.3"
enum_derive = "*"
error_derive = "*"
exitcode = "1.1.2"
git2 = "0.6.4"
htmlescape = "0.3.1"
hyper = "0.10"
hyper-native-tls = "0.2"
isatty = "0.1.1"
itertools = "0.6.5"
lazy_static = "*"
log = "0.3"
macro-attr = "*"
maplit = "0.1"
regex = "0.2"
select = "0.4"
serde_json = "0.8.4"
shlex = "0.1.1"
slog = "1.5.2"
slog-envlogger = "0.5"
slog-stdlog = "1.1"
slog-stream = "1.2"
time = "0.1"
try_opt = "*"
url = "1.2"
webbrowser = "0.1.3"

[build-dependencies]
rustc_version = "0.2"

[dev-dependencies]
tempfile = "2.1.5"
traitobject = "0.1.0"

[profile.release]
lto = true
